# scientific_calculations

./: .gitignore  averaged_temperature.py  plotter.py  plotter_quiver.py  pyproject.toml  x_velocity.py  y_velocity.py
