[tool.poetry]
name = "pulsating-field"
version = "0.1.0"
description = ""
authors = ["Ivan Volodin <ivanwolodin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.13.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
